--- a/src/app/a-projects/a-project/a-datasets/dataset-list/dataset-list.component.html
+++ b/src/app/a-projects/a-project/a-datasets/dataset-list/dataset-list.component.html
@@ -1,3 +1,3 @@
-<p>
-  dataset-list works!
-</p>
+<div>
+  <li *ngFor="let item of datasets"><a [routerLink]="['.', item.id]">{{item.name}}</a></li>
+</div>
